# LASR_setup

./: .env.example  .gitignore  README.md  pyproject.toml
datasets/: caps_dataset.jsonl
datasets/test/: angry_lowercase.jsonl  angry_uppercase.jsonl  polite_lowercase.jsonl  polite_uppercase.jsonl
src/lasr_setup/: __init__.py
src/lasr_setup/steering/: __init__.py  cli.py  extract.py
