[project]
name = "lasr-setup"
version = "0.1.0"
description = "LASR AI safety research template"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "transformers",
    "matplotlib",
    "numpy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lasr_setup"]

[tool.uv]
dev-dependencies = []
